--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,7 +10,7 @@ header {
     margin: 5% 5% 0 5%;
     height: 120px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 ul {
@@ -28,12 +28,18 @@ h3, ul, a {
     text-decoration: none;
 }
 .name {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 @media (min-width: 768px) {
     .header--content {
         margin: 3%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .header--content {
+        justify-content: space-between;
     }
 }
 
