work detail 페이지 세팅함

--- a/src/app/worksDetail/primrose/primrose.component.html
+++ b/src/app/worksDetail/primrose/primrose.component.html
@@ -1,50 +1,77 @@
 <section class="single">
-  
+
   <div class="single__frontImg">
+    <div class="single__frontImg__title">
+      <pre class="underline"> Primrose; <br> Media Art Project </pre>
+      <!-- <pre class="underline"> Media Art Project </pre> -->
+    </div>
     <div class="single__frontImg__img">
       <img src="./../../../assets/Works/2014_Primrose/img/pic05-big.jpg">
       <p class="img__figure">fig 1. Close-up shot of Installation</p>
-    </div>
-    <div class="single__frontImg__title">
-      <p class="underline">First Snow</p>
-      <p class="underline" >Media Art Project</p>
     </div>
   </div>
 
   <div class="single__frontText">
     <div class="single__frontText__desc">
-        <h3>
-          Sbanken, formerly known as Skandiabanken, is the Norwegian bank that has had the most satisfied customers since 2002. Sbanken is also the first bank that emerged as a pure digital bank, bold and brave from the very beginning.
-        </h3>
+      <h3>
+          “Flower open in the evening, hence the name ’evening primrose’. They may open in under a minute.”
+      </h3>
     </div>
     <div class="single__frontText__category">
-        <p>CATEGORY</p>
-        <p>Technology</p>
-        <br>
-        <p>PRODUCT</p>
-        <p>Visual identity</p>
-        <br>
-        <p>CLIENT</p>
-        <p>Skandiabanekn - Sbanken</p>
+      <p>CATEGORY</p>
+      <p>Technology</p>
+      <br>
+      <p>PRODUCT</p>
+      <p>Visual identity</p>
+      <br>
+      <p>CLIENT</p>
+      <p>Skandiabanekn - Sbanken</p>
     </div>
-    
-    <div class="single__secondImg">
-      <div class="single__secondImg__img">
-        <img src="./../../../assets/Works/2014_Primrose/img/pic05-big.jpg">
+  </div>
+
+  <div class="main">
+    <div class="main__container">
+      <p class="main__container__word">
+        <span>About the work</span>
+        <br>
+        <br> Evening Primrose is an interactive lamp. The concept is fundamentally based on the Korean novel, where scenery of
+        flowers beneath the moonlight is beautifully described. This lamp let people understand what they lose when they
+        disturb the quiet, solemn atmosphere. When certain abrupt movement is sensed or noise level goes beyond the threshold
+        or light too bright is shone, the flower withers. By this, people can acknowledge that they have disturbed the silent
+        atmosphere and become aware of themselves.
+        <br>
+        <br> If disturbance is cleared away, flower slowly comes back into life and blooms again. Users can make this process
+        faster by blowing the inside of the flower. This breathes life into the flower.
+        <br>
+        <br>With its beautiful aesthetic and graceful movement, this product can be used as a silence-keeper in a public place,
+        as well as a moodlight.
+      </p>
+
+      <div class="main__container__img-full">
+        <img src="./../../../assets/Works/2014_Primrose/img/pic03-big.jpg">
+        <p class="img__figure">fig 2. Primrose reacting to the environment</p>
       </div>
-      <div class="single__secondImg__img">
-        <img src="./../../../assets/Works/2014_Primrose/img/pic05-big.jpg">
+
+      <p class="main__container__word">
+        <span>Why I chose this work</span>
+        <br>
+        <br> It is my belief that a product design, especially an interactive product should have poetic aspects in which people
+        could agree upon. This product started out with such intentions, with some exprimental features, in order to make
+        an poetic interactive product., and so is a good example of my design view.
+      </p>
+
+      <div class="main__container__img-right">
+        <img src="./../../../assets/Works/2014_Primrose/img/pic02-big.jpg">
+        <p class="img__figure">fig 3. Primrose reacting to the environment</p>
       </div>
-      <div class="single__secondImg__img">
-        <img src="./../../../assets/Works/2014_Primrose/img/pic05-big.jpg">
+
+      <div class="main__container__img-left">
+        <img src="./../../../assets/Works/2014_Primrose/img/pic04-big.jpg">
+        <p class="img__figure">fig 4. Primrose reacting to the environment</p>
       </div>
+
     </div>
 
   </div>
 
-  <div class="single__main">
-    <hr>
-
-  </div>
-  
 </section>
