--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,4 +1,4 @@
-<div id="background"></div>
+<div id="eyeContainer"></div>
 <div class="main container" >
   
   <ng-container *ngFor="let project of projects ">
