--- a/src/app/works/works.component.scss
+++ b/src/app/works/works.component.scss
@@ -1,3 +1,11 @@
+#eyeContainer {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0);
+    top: 2.5%;
+    z-index: 9999;
+}
+
 .container {
     padding-top: 30px;
     margin: 140px 5% 0 5%; 
@@ -62,7 +70,7 @@
 }
 
 .hide {
-    opacity: 0;
+    opacity: 0.3;
 }
 
 .show {
