--- a/src/app/worksDetail/primrose/primrose.component.html
+++ b/src/app/worksDetail/primrose/primrose.component.html
@@ -19,13 +19,13 @@
     </div>
     <div class="single__frontText__category">
       <p>CATEGORY</p>
-      <p>Technology</p>
+      <p>Interaction Design</p>
       <br>
       <p>PRODUCT</p>
-      <p>Visual identity</p>
+      <p>Installation</p>
       <br>
       <p>CLIENT</p>
-      <p>Skandiabanekn - Sbanken</p>
+      <p>-</p>
     </div>
   </div>
 
