--- a/src/app/worksDetail/works-detail-base/works-detail-base.component.scss
+++ b/src/app/worksDetail/works-detail-base/works-detail-base.component.scss
@@ -1,5 +1,23 @@
 @import './../../../color';
 
+@keyframes slideDown {
+    0% {
+        max-height: 0px;
+    }
+    100% {
+        max-height: 10000px;
+    }
+  }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+  }
+  
 .contentSingle{
     // background-color: #9E8777;
     background-color: $white;
@@ -9,23 +27,35 @@
     ::-webkit-scrollbar {
         width: 25px;
     }
+    animation:slideDown 3.5s ease-in forwards;
 
+    // transition: all 5s ease;
+}
+
+#back {
+    opacity:0;
+    animation: fadeIn 2s ease 1s forwards ;
 }
 
 .workDetail {
     width: 100%;
     display: flex;
     justify-content: center;
+    opacity:0;
+    animation:fadeIn 2s ease 1s forwards;
     // margin: auto;
+    // transition: opacity 2s ease;
 }
 
 footer {
+    animation:fadeIn 4s ease forwards;
     display: flex;
     position: relative;
     justify-content: center;
     background-color: $gray;
     padding: 10px 0;
     margin: 0px 10% 0 10%; 
+    z-index: -9999;
     p {
         color: $black;
         font-size: 13px;
