--- a/src/app/worksDetail/consumer/consumer.component.html
+++ b/src/app/worksDetail/consumer/consumer.component.html
@@ -37,16 +37,16 @@
         <span>About the work</span>
         <br>
         <br> Emerging technologies for digital design and fabrication let people participate in the making of objects that were
-        previ- ously dominated by professional designers. A growing body of work in HCI provides understanding in the activities
+        previously dominated by professional designers. A growing body of work in HCI provides understanding in the activities
         of designing and making by novices and in maker communities. However, we know little about how casual users might
         employ these technologies with the goal of having an object in their home that satisfies a need.
         <br>
-        <br> 'Consumer to Creator' is a long-term qualitative study in which we followed 16 households during a purchas- ing
+        <br> 'Consumer to Creator' is a long-term qualitative study in which we followed 16 households during a purchasing
         process of furniture items for their homes. We looked into how families discover what they need, find solutions,
         realize a solution in their house and put it to use.
         <br>
-        <br> The results provide in- sights into their design activities and workflow and we identify two distinct stages: understanding
-        needs and prototyping a so- lution. Based on the findings, we discuss the social practice of acquiring and appropriating
+        <br> The results provide insights into their design activities and workflow and we identify two distinct stages: understanding
+        needs and prototyping a solution. Based on the findings, we discuss the social practice of acquiring and appropriating
         furniture in the home and within families, and identify design opportunities for digital design and fabrication to
         support people as they create the objects they need, want and desire.
       </p>
