--- a/src/app/worksDetail/banban/banban.component.html
+++ b/src/app/worksDetail/banban/banban.component.html
@@ -1,3 +1,96 @@
-<p>
-  banban works!
-</p>
+<section class="single">
+
+  <div class="single__frontImg">
+    <div class="single__frontImg__title">
+      <pre class="underline"> Banban; <br> Food delivery app <br> for students Cat-shelter </pre>
+    </div>
+    <div class="single__frontImg__img">
+      <img src="./../../../assets/Works/2015_Banban/img/pic08.jpg">
+      <p class="img__figure">fig 1.</p>
+    </div>
+  </div>
+
+  <div class="single__frontText">
+    <div class="single__frontText__desc">
+      <h3>
+        “Most delivery services have minimum amount you have to order. So if you live alone, there are only few choices you can order
+        to have the amount you need.”
+      </h3>
+    </div>
+    <div class="single__frontText__category">
+      <p>CATEGORY</p>
+      <p>Application Design</p>
+      <br>
+      <p>PRODUCT</p>
+      <p>Banban ios App
+        <p>
+          <p>WITH</p>
+          <p>
+            Junwon Choi
+            <br> Jongsung Lee
+            <br> Moonjung Gang
+            <br> Sohee Ahn
+            <br> Jesook Yun
+            <br> Heyun Lee
+            <br> Jaewan Yoo
+          </p>
+
+    </div>
+  </div>
+
+  <div class="main">
+    <div class="main__container">
+      <p class="main__container__word">
+        <span>About the work</span>
+        <br>
+        <br> This is an app design for students who live alone, named ‘banban’. The target user, a student, will use this application
+        when he wants to order a food but not cannot find a friend who can order it with him. Because food delivery services
+        usually have minimum amount of food for customers to order, one usually cannot order only one person’s amount of
+        food. This application solves such problem by giving users an option to order a chicken with people living around
+        the same area.
+
+        <br>
+        <br> When you go inside the application, you can easily find people who live nearby who is waiting for another person
+        to order some food with them. Through an easy matching system, user can group together and order the food to their
+        place. They can then split the food between themselves.
+      </p>
+
+      <div class="main__container__img-full">
+        <img src="./../../../assets/Works/2015_Banban/img/pic03.jpg">
+        <p class="img__figure">
+          fig 2. Users are ordering a chicken to share it between themselves</p>
+      </div>
+
+      <p class="main__container__word">
+        <span>About the work</span>
+        <br>
+        <br> 
+        This application is a result of a one week, fun collaboration among a group of 
+desingers who have met in 2015 NAVER UXDP camp. It was a great 
+experience in that the group were able to imagine creatively and succeed in 
+making such appealing, funny and somewhat outrageous application concept 
+in a limited time.
+      </p>
+
+      <div class="main__container__img-full">
+        <img src="./../../../assets/Works/2015_Banban/img/video.jpg">
+        <p class="img__figure">
+          video 1. Final prototype video showcase </p>
+      </div>
+
+      <div class="main__container__img-left">
+        <img src="./../../../assets/Works/2015_Banban/img/pic06.jpg">
+        <p class="img__figure">
+          fig 3. Logo </p>
+      </div>
+
+      <div class="main__container__img-right">
+        <img src="./../../../assets/Works/2015_Banban/img/pic02.jpg">
+        <p class="img__figure">
+          fig 4. Application opening page</p>
+      </div>
+    </div>
+
+  </div>
+
+</section>
