--- a/src/app/worksDetail/churros/churros.component.html
+++ b/src/app/worksDetail/churros/churros.component.html
@@ -40,7 +40,10 @@
         your own custom churros by using the 3d printing fabrication technology. With this machine, users can actually print
         out their custom shaped churros and fry it automatically.
         <br>
-        <br> The process is as follows. First, users design their own shape of churros in a dedicated computer program. Then
+        <br> The process is as follows. 
+        <br><br>
+        
+        First, users design their own shape of churros in a dedicated computer program. Then
         the program translate it into CNC G-code, of which the arduino in the ‘Churros Printer’ recognizes. After the printer
         prints all the flour dough, the grill plate is lowered down into the oil pot for a dedicated time depending on the
         amount of dough printed out. When all finishes, user can take out the fried churros and deep it into sugar for a
@@ -91,8 +94,8 @@
       </p>
 
       <div class="main__container__img-full">
-        <img src="./../../../assets/Works/2016_ConsumerToCreator/img/pic03.jpg">
-        <p class="img__figure">fig 5. Analyzing data with post-its</p>
+        <img src="./../../../assets/Works/2016_ChurrosPrinter/img/pic01.jpg">
+        <p class="img__figure">fig 7.</p>
       </div>
 
     </div>
