--- a/src/app/worksDetail/banban/banban.component.html
+++ b/src/app/worksDetail/banban/banban.component.html
@@ -72,11 +72,17 @@ making such appealing, funny and somewhat outrageous application concept
 in a limited time.
       </p>
 
-      <div class="main__container__img-full">
-        <img src="./../../../assets/Works/2015_Banban/img/video.jpg">
+      <div class="main__container__video">
+        <iframe src="https://www.youtube.com/embed/_1mF3n2fspE?title=0&showinfo=0&byline=0&portrait=0" width="800" height="450" frameborder="0"></iframe>
+      </div>
+      <p class="img__figure" style="margin-bottom:36px;"> 
+        video 1. Final prototype video showcase </p>
+
+      <!-- <div class="main__container__img-full">
+        <img src="./../../../assets/Works/2015_Banban/img/videogif.gif">
         <p class="img__figure">
           video 1. Final prototype video showcase </p>
-      </div>
+      </div> -->
 
       <div class="main__container__img-left">
         <img src="./../../../assets/Works/2015_Banban/img/pic06.jpg">
