--- a/src/app/worksDetail/churros/churros.component.html
+++ b/src/app/worksDetail/churros/churros.component.html
@@ -22,11 +22,10 @@
       <p>Design Fabrication</p>
       <br>
       <p>PRODUCT</p>
-      <p>Food 3d print machine
-        <p>
-          <br>
-          <p>WITH</p>
-          <p>-</p>
+      <p>Food 3d print machine</p>
+      <br>
+      <p>WITH</p>
+      <p>-</p>
     </div>
   </div>
 
@@ -40,14 +39,12 @@
         your own custom churros by using the 3d printing fabrication technology. With this machine, users can actually print
         out their custom shaped churros and fry it automatically.
         <br>
-        <br> The process is as follows. 
-        <br><br>
-        
-        First, users design their own shape of churros in a dedicated computer program. Then
-        the program translate it into CNC G-code, of which the arduino in the ‘Churros Printer’ recognizes. After the printer
-        prints all the flour dough, the grill plate is lowered down into the oil pot for a dedicated time depending on the
-        amount of dough printed out. When all finishes, user can take out the fried churros and deep it into sugar for a
-        sweet taste.
+        <br> The process is as follows.
+        <br>
+        <br> First, users design their own shape of churros in a dedicated computer program. Then the program translate it into
+        CNC G-code, of which the arduino in the ‘Churros Printer’ recognizes. After the printer prints all the flour dough,
+        the grill plate is lowered down into the oil pot for a dedicated time depending on the amount of dough printed out.
+        When all finishes, user can take out the fried churros and deep it into sugar for a sweet taste.
       </p>
 
       <div class="main__container__img-full">
@@ -79,7 +76,7 @@
       </div>
 
       <div class="main__container__img-full">
-        <img src="./../../../assets/Works/2016_ChurrosPrinter/img/pic07.jpg">
+        <img src="./../../../assets/Works/2016_ChurrosPrinter/img/pic08.jpg">
         <p class="img__figure">fig 6. The overview of the product prototype</p>
       </div>
 
@@ -94,7 +91,7 @@
       </p>
 
       <div class="main__container__img-full">
-        <img src="./../../../assets/Works/2016_ChurrosPrinter/img/pic01.jpg">
+        <img src="./../../../assets/Works/2016_ChurrosPrinter/img/pic07.jpg">
         <p class="img__figure">fig 7.</p>
       </div>
 
