--- a/src/app/worksDetail/works-detail-base/works-detail-base.component.scss
+++ b/src/app/worksDetail/works-detail-base/works-detail-base.component.scss
@@ -5,7 +5,7 @@
         max-height: 0px;
     }
     100% {
-        max-height: 10000px;
+        max-height: 8000px;
     }
   }
 
@@ -27,14 +27,14 @@
     ::-webkit-scrollbar {
         width: 25px;
     }
-    animation:slideDown 3.5s ease-in forwards;
+    animation:slideDown 1.2s cubic-bezier(0.7,0,1,1) forwards;
 
     // transition: all 5s ease;
 }
 
 #back {
     opacity:0;
-    animation: fadeIn 2s ease 1s forwards ;
+    animation: fadeIn 1.1s ease 0.4s forwards ;
 }
 
 .workDetail {
@@ -42,7 +42,7 @@
     display: flex;
     justify-content: center;
     opacity:0;
-    animation:fadeIn 2s ease 1s forwards;
+    animation:fadeIn 1.1s ease 0.4s forwards;
     // margin: auto;
     // transition: opacity 2s ease;
 }
