--- a/src/app/worksDetail/consumer/consumer.component.html
+++ b/src/app/worksDetail/consumer/consumer.component.html
@@ -25,9 +25,11 @@
       <p>CHI 17'</p>
       <br>
       <p>WITH</p>
-      <p>Daniel Saakes
+      <p>
+        <a href="http://saakes.net/" class="link_underline">Daniel Saakes</a>
         <br> Bokyung Lee
-        <br> Gyeol Han</p>
+        <br> Gyeol Han
+      </p>
     </div>
   </div>
 
