--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,5 @@
+@import './../../color';
+
 header {
     position: fixed;
     top: 0;
@@ -24,11 +26,12 @@ ul {
 h3, ul, a {
     margin: 0;
     font-size: 18px;
-    color: #707070;
+    color: $darkgary;
     text-decoration: none;
 }
 .name {
     font-size: 18px;
+    color: $black;
 }
 
 @media (min-width: 768px) {
