started about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,51 @@
-<div class="container">
+<!-- <div class="container">
     <div id="text" class="text"></div>
     <div id="test"></div>
-</div>
+</div> -->
+<section class="contentSingle">
+  <div class="workDetail">
+    <div class="fixed">
+        <p class="underline"> Wonderful to meet you. It is a pleasure to introduce myself to you. </p>
+    </div>
+    <section class="main">
+        <div class="main-560">
+            <div class="main-boxes" id="main-boxes"></div>
+            <div class="main-words intro">
+                <p>
+                        I’m an South-Korean designer living and working in Seoul and Daejeon. Currently I’m working as a designer role in IDIM lab. 
+                        Until recently, I was studying for master degree in Industrial design. 
+                        <br>
+                        <br>
+                        I’m interested in how design can embrace constantly advancing techonologies as well as complicated human behaviors, and solve problems we face today in our everyay lives. Thereby I hope to inspire and enable the people who use and interact with the results of my design.
+                        <br>
+                        <br>
+                        Outside work, I’m interviewing a bunch of interesting people, making visual graphic posters, sketching other beautiful products and working out in the gym. I can also play some drum too.
+                    
+                </p>
+            </div>
+
+            <div class="main-boxes"></div>
+            <div class="main-words cv">
+                <p>
+                        <span>Educational Background</span> <br>
+                        KAIST : Industrial Design & Mechanical Engineering / 2016 <br>
+                        KAIST : Industrial Design, Master Degree / 2018 <br>
+                        <br>
+                        
+                        <span>International Conference Papers</span> <br>
+                        CHI 2017, Consumer to Createor: How Households Buy Furniture to Inform Design and Fabrication interfaces (3rd author) / 2017 <br>
+                        <br>
+                        
+                        <span>Awards and Honors</span>
+                        SKT ICT Vision Contest, 4th / 2014<br>
+                        Korea Science Technology Innovation Contest, Grand Prize / 2014<br>
+                        Spark Concept International Award, Finalist / 2015<br>
+                        <br>
+
+                </p>
+            </div>
+        </div>
+    </section>
+  </div>
+  
+</section>
