--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,29 +1,135 @@
 @import './../../color';
 
-html, body {
-    font-family : 'relative-book', monospace;
-}
-.container {
-    display: flex;
-    justify-content : center;
-    align-items: center;
-    height: 6000px;
-}
-.text {
-    position: fixed;
-    top: 500px;
-    left:150px;
-    font-size: 28px;
-    color: $black;
-}
-.dud {
-    color: $darkgary;
+@keyframes slideDown {
+  0% {
+    max-height: 0px;
+  }
+  100% {
+    max-height: 8000px;
+  }
 }
 
-#test {
-    position: absolute;
-    top: 3000px;
-    width: 100px;
-    height:400px;
-    background-color:black;
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
+
+.contentSingle {
+  background-color: $white;
+  margin: 0px 10% 0 10%;
+  ::-webkit-scrollbar {
+    width: 25px;
+  }
+  animation:slideDown 1.2s cubic-bezier(0.7, 0, 1, 1) forwards;
+}
+
+.workDetail {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  animation: fadeIn 1.1s ease 0.4s forwards; 
+}
+
+.main {
+    padding-top: 150px; 
+
+    padding-bottom: 180px;
+    width: 960px;
+    color: $black;
+
+    display : flex;
+    justify-content: flex-end;
+
+    .main-560 {
+        width: 580px;
+        background-color: $black;
+        // height: 1000px;
+    }
+}
+.main-words{
+    margin-top: 140px;
+    padding: 40px;
+    p {
+        font-family: 'relative-mono10pitch';
+        font-size: 16px;
+        line-height: 2;
+        color: $white;
+    }
+    span {
+        text-decoration: underline;
+    }
+}
+
+.intro {
+
+}
+
+.cv {
+
+}
+
+.fixed {
+    z-index: 9999;
+    font-family: 'relative-mono10pitch';
+    font-size: 18px;
+    line-height: 1.8;
+    
+    top: 150px;
+    left: 17%;
+    position: fixed;
+    width: 300px;
+}
+
+.underline {
+    background-image: url(../../assets/imgs/textbg3.png);
+    display: inline;
+    background-size:auto 127px;
+    margin: 40px 0;
+    line-height: 1.3;
+}
+
+
+@media (max-width: 1280px) {
+    .main {
+        width: unset;
+    }
+
+    .fixed {
+        top: 70px;
+        left: 5%
+    }
+}
+
+
+
+// html, body {
+//     font-family : 'relative-book', monospace;
+// }
+// .container {
+//     display: flex;
+//     justify-content : center;
+//     align-items: center;
+//     height: 6000px;
+// }
+// .text {
+//     position: fixed;
+//     top: 500px;
+//     left:150px;
+//     font-size: 28px;
+//     color: $black;
+// }
+// .dud {
+//     color: $darkgary;
+// }
+// #test {
+//     position: absolute;
+//     top: 3000px;
+//     width: 100px;
+//     height:400px;
+//     background-color:black;
+// }
