about page doing

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -45,15 +45,18 @@
     display : flex;
     justify-content: flex-end;
 
-    .main-560 {
-        width: 580px;
-        background-color: $black;
-        // height: 1000px;
-    }
 }
+
+.main-560 {
+    width: 580px;
+    background-color: $black;
+    // height: 1000px;
+}
+
 .main-words{
-    margin-top: 140px;
-    padding: 40px;
+    padding-top : 10px;
+    padding-left: 40px;
+    padding-right: 40px;
     p {
         font-family: 'relative-mono10pitch';
         font-size: 16px;
@@ -61,8 +64,19 @@
         color: $white;
     }
     span {
-        text-decoration: underline;
+        font-family: 'relative-bold';
     }
+}
+
+.main-boxes {
+    padding: 40px 0px 0px 35px;
+}
+
+.link {
+    color: white;
+}
+.link:hover {
+    color: white;
 }
 
 .intro {
@@ -105,6 +119,16 @@
     }
 }
 
+@media (max-width: 730px) {
+    .contentSingle{ 
+        margin: 0;
+    }
+}
+@media (max-width: 550px) {
+    .main-560 {
+        width: unset;
+    }
+}
 
 
 // html, body {
@@ -124,7 +148,7 @@
 //     color: $black;
 // }
 // .dud {
-//     color: $darkgary;
+//     color: $darkgray;
 // }
 // #test {
 //     position: absolute;
