--- a/src/color.scss
+++ b/src/color.scss
@@ -1,6 +1,6 @@
 $black: #333333;
 $white: #fff;
 $gray : #EFEFEF;
-$darkgary : #898989;
+$darkgray : #898989;
 $blueHL : #48F1FF;
 $pinkHL : #FF76DA;
