--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -49,6 +49,37 @@
 
           </p>
         </div>
+
+        <div class="main-boxes" id="main-boxes-3"></div>
+        <div class="main-forms">
+            <form>
+              <div class="form-top">
+                <label for="to">To:</label>
+                <input type="text" value="jundong0901@gmail.com" class="to" readonly >
+              </div>
+        
+              <div class="form-top">
+                <label for="from">From:</label>
+                <input type="text" class="" id="from" required>
+              </div>
+              
+              <div class="form-top">
+                <label for="subject">Subject:</label>
+                <input type="text" class="" id="subject">
+              </div>
+
+              <hr>
+
+              <div class="form-write">
+                <!-- <textarea type="text" class="write" id="txt" rows="20" placeholder="Type your message here..." ></textarea> -->
+                <textarea type="text" class="write" id="txt" rows="20" placeholder="(under construction)"></textarea>
+              </div>
+        
+              <button type="submit" class="submit">Submit</button>
+        
+            </form>
+        </div>
+
       </div>
     </section>
   </div>
