--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -64,7 +64,8 @@
         color: $white;
     }
     span {
-        font-family: 'relative-bold';
+        // font-family: 'relative-bold';
+        color: $darkgray;
     }
 }
 
@@ -72,19 +73,55 @@
     padding: 40px 0px 0px 35px;
 }
 
+.main-forms {
+    padding-top : 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    color: $white;
+    font-size: 16px;
+    input, textarea {
+        margin-bottom: 5px;
+        font-family: 'relative-mono10pitch';
+        min-width: 300px;
+        color: $white;
+        background-color: $black;
+        border:none;
+        font-size: 16px;
+
+        color: #48F1FF;
+        border: none;
+        overflow: auto;
+        outline: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
+    hr {
+        border: none;
+        height: 1px;
+        color: $white;
+        background-color: $white;
+    }
+
+    textarea {
+        width: 100%;
+    }
+
+    .to {
+        color: #FF76DA;
+    }
+    ::placeholder {
+        color: #48F1FF;
+    }
+}
+
+
+
 .link {
     color: white;
 }
 .link:hover {
     color: white;
-}
-
-.intro {
-
-}
-
-.cv {
-
 }
 
 .fixed {
