--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,10 +5,19 @@
 <section class="contentSingle">
   <div class="workDetail">
     <div class="fixed">
-      <p class="underline"> Wonderful to meet you. It is a pleasure to introduce myself to you. </p>
+      <a class="link_underline underline" href="https://www.linkedin.com/in/jundongpark/">linkedin/jundongpark</a>
+      <a class="link_underline underline" href="mailto:jundong@gmail.com">contanct@jundongpark</a>
+      <a class="link_underline underline" href="https://docs.google.com/document/d/11AUm3zxcWwLWeD4ci4VZAPj8uQUpaR1KpAV1QCAI8s4/edit?usp=sharing">resume/jundongpark</a>
+      <!-- <p class="underline"> 
+        Wonderful to meet you. It is a pleasure to introduce myself to you. 
+      </p> -->
     </div>
+
     <section class="main">
+
+
       <div class="main-560">
+
         <div class="main-boxes" id="main-boxes-1"></div>
         <div class="main-words intro">
           <p>
