--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -130,10 +130,11 @@
     font-size: 18px;
     line-height: 1.8;
     
-    top: 150px;
+    top: 200px;
     left: 17%;
     position: fixed;
     width: 300px;
+
 }
 
 .underline {
@@ -142,6 +143,13 @@
     background-size:auto 127px;
     margin: 40px 0;
     line-height: 1.3;
+    color: $black;
+}
+
+.link_underline {
+  &:hover {
+    background-image:none;
+  }
 }
 
 
@@ -151,7 +159,7 @@
     }
 
     .fixed {
-        top: 70px;
+        top: 130px;
         left: 5%
     }
 }
