--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,19 +4,20 @@
 </div> -->
 <section class="contentSingle">
   <div class="workDetail">
-    <div class="fixed">
-      <a class="link_underline underline" href="https://www.linkedin.com/in/jundongpark/">linkedin/jundongpark</a>
-      <a class="link_underline underline" href="mailto:jundong@gmail.com">contanct@jundongpark</a>
-      <a class="link_underline underline" href="https://docs.google.com/document/d/11AUm3zxcWwLWeD4ci4VZAPj8uQUpaR1KpAV1QCAI8s4/edit?usp=sharing">resume/jundongpark</a>
-      <!-- <p class="underline"> 
-        Wonderful to meet you. It is a pleasure to introduce myself to you. 
-      </p> -->
-    </div>
 
     <section class="main">
 
 
       <div class="main-560">
+        
+        <div class="fixed">
+          <a class="link_underline underline" href="https://www.linkedin.com/in/jundongpark/">linkedin/jundongpark</a>
+          <a class="link_underline underline" href="mailto:jundong@gmail.com">contanct@jundongpark</a>
+          <a class="link_underline underline" href="https://docs.google.com/document/d/11AUm3zxcWwLWeD4ci4VZAPj8uQUpaR1KpAV1QCAI8s4/edit?usp=sharing">resume/jundongpark</a>
+          <!-- <p class="underline"> 
+            Wonderful to meet you. It is a pleasure to introduce myself to you. 
+          </p> -->
+        </div>
 
         <div class="main-boxes" id="main-boxes-1"></div>
         <div class="main-words intro">
@@ -59,8 +60,8 @@
           </p>
         </div>
 
-        <div class="main-boxes" id="main-boxes-3"></div>
-        <div class="main-forms">
+        <!-- <div class="main-boxes" id="main-boxes-3"></div> -->
+        <!-- <div class="main-forms">
             <form>
               <div class="form-top">
                 <label for="to">To:</label>
@@ -80,17 +81,19 @@
               <hr>
 
               <div class="form-write">
-                <!-- <textarea type="text" class="write" id="txt" rows="20" placeholder="Type your message here..." ></textarea> -->
                 <textarea type="text" class="write" id="txt" rows="20" placeholder="(under construction)"></textarea>
               </div>
         
               <button type="submit" class="submit">Submit</button>
         
             </form>
-        </div>
+        </div> -->
 
       </div>
     </section>
   </div>
 
 </section>
+<footer>
+  <p>© 2017–2018 Jundong Park</p>
+</footer>
