--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -36,18 +36,15 @@
 }
 
 .main {
-    padding-top: 150px; 
-
-    padding-bottom: 180px;
+    padding: 100px 0 100px 0;
     width: 960px;
     color: $black;
-
     display : flex;
     justify-content: flex-end;
-
 }
 
 .main-560 {
+    padding-bottom: 200px;
     width: 580px;
     background-color: $black;
     // height: 1000px;
@@ -152,6 +149,28 @@
   }
 }
 
+footer {
+    animation:fadeIn 4s ease forwards;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    background-color: $gray;
+    padding: 10px 0;
+    margin: 0px 10% 0 10%; 
+    z-index: 9999;
+    p {
+        color: $black;
+        font-size: 13px;
+        font-family: 'relative-mono10pitch';
+    }
+}
+
+@media (min-width: 1500px) {
+    .main-560 {
+        width: 750px;
+    }
+}
+
 
 @media (max-width: 1280px) {
     .main {
@@ -163,6 +182,19 @@
         left: 5%
     }
 }
+@media (max-width: 850px) {
+    .fixed {
+        position: unset;
+        padding: 40px 40px;
+        a {
+            color: white;
+            background: none;
+        }
+        a :visited {
+            color: white;
+        }
+    }
+}
 
 @media (max-width: 730px) {
     .contentSingle{ 
@@ -172,6 +204,9 @@
 @media (max-width: 550px) {
     .main-560 {
         width: unset;
+    }
+    footer {
+        margin: 0;
     }
 }
 
