--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,9 +11,9 @@
       <div class="main-560">
         
         <div class="fixed">
-          <a class="link_underline underline" href="https://www.linkedin.com/in/jundongpark/">linkedin/jundongpark</a>
-          <a class="link_underline underline" href="mailto:jundong@gmail.com">contanct@jundongpark</a>
-          <a class="link_underline underline" href="https://docs.google.com/document/d/11AUm3zxcWwLWeD4ci4VZAPj8uQUpaR1KpAV1QCAI8s4/edit?usp=sharing">resume/jundongpark</a>
+          <a class="link_fixed" target="_blank" href="https://www.linkedin.com/in/jundongpark/">linkedin/jundongpark</a>
+          <a class="link_fixed" href="mailto:contact@jundongpark.com">contact@jundongpark.com</a>
+          <a class="link_fixed" target="_blank" href="./../../assets/files/Resume180221.pdf">resume/download</a>
           <!-- <p class="underline"> 
             Wonderful to meet you. It is a pleasure to introduce myself to you. 
           </p> -->
