--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -130,24 +130,12 @@
     top: 200px;
     left: 17%;
     position: fixed;
-    width: 300px;
-
+    width: 30px;
+    a {
+        color: $black;
+    }
 }
 
-.underline {
-    background-image: url(../../assets/imgs/textbg3.png);
-    display: inline;
-    background-size:auto 127px;
-    margin: 40px 0;
-    line-height: 1.3;
-    color: $black;
-}
-
-.link_underline {
-  &:hover {
-    background-image:none;
-  }
-}
 
 footer {
     animation:fadeIn 4s ease forwards;
