--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,15 +22,13 @@
         <div class="main-boxes" id="main-boxes-1"></div>
         <div class="main-words intro">
           <p>
-            I’m an South-Korean designer living and working in Seoul and Daejeon. Currently I’m working as a designer role in IDIM lab.
-            Until recently, I was studying for master degree in Industrial design.
+            I’m a South-Korean designer living and working in Seoul and Daejeon. Currently, I’m working in a designer role in IDIM lab. Until recently, I was studying for the master degree in Industrial design. 
             <br>
-            <br> I’m interested in how design can embrace constantly advancing techonologies as well as complicated human behaviors,
-            and solve problems we face today in our everyay lives. Thereby I hope to inspire and enable the people who use
-            and interact with the results of my design.
+            <br> 
+            I am interested in how design can embrace constantly advancing technologies as well as complicated human behaviors, and solve problems we face today in our everyday lives. Thereby I hope to inspire and enable the people who use and interact with the results of my design. 
             <br>
-            <br> Outside work, I’m interviewing a bunch of interesting people, <a class="link" href="http://www.fantastic-conceits.com">making visual graphic posters</a>, sketching other
-            beautiful products and working out in the gym. I can also play some drum too.
+            <br> 
+            Outside of work, I’m interviewing a bunch of interesting people, making visual graphic posters, sketching other beautiful products and working out in the gym. I can also play some drum too.
 
           </p>
         </div>
